--- a/BlazorServerApp/BlazorServerApp.csproj
+++ b/BlazorServerApp/BlazorServerApp.csproj
@@ -6,4 +6,18 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Grpc.AspNetCore" Version="2.59.0" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.59.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="..\gRpcDemoService\Protos\greet.proto" GrpcServices="Client">
+      <Link>Protos\greet.proto</Link>
+    </Protobuf>
+    <Protobuf Include="..\gRpcDemoService\Protos\sample.proto" GrpcServices="Client">
+      <Link>Protos\sample.proto</Link>
+    </Protobuf>
+  </ItemGroup>
+
 </Project>
