--- a/gRpcDemoService/GrpcDemoService.csproj
+++ b/gRpcDemoService/GrpcDemoService.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
     <Protobuf Include="Protos\sample.proto" GrpcServices="Server" />
+    <Protobuf Include="Protos\product.proto" GrpcServices="Server" />
   </ItemGroup>
 
   <ItemGroup>
