--- a/BlazorServerApp/BlazorServerApp.csproj
+++ b/BlazorServerApp/BlazorServerApp.csproj
@@ -13,6 +13,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Protobuf Include="..\gRpcDemoService\Protos\authentication.proto" GrpcServices="Client">
+      <Link>Protos\authentication.proto</Link>
+    </Protobuf>
     <Protobuf Include="..\gRpcDemoService\Protos\greet.proto" GrpcServices="Client">
       <Link>Protos\greet.proto</Link>
     </Protobuf>
